# Describtions

./: Eclipse IDE in Linux.txt  Git.txt  LetsEncrypt.txt  Python.txt  README.md  Переменные окружения в Linux.txt  Полезные комманды в Linux.txt
Bash/: iso.sh  python_building.sh  rename.sh  scripts.sh
CMake/cppProsto/Lesson_1/: CMakeLists.txt  Terminal.html  main.cpp
CMake/cppProsto/Lesson_2/: CMakeLists.txt
CMake/cppProsto/Lesson_2/Doc/: Doc.txt  Terminal.html
CMake/cppProsto/Lesson_2/include/: path.h.in  stest.hpp  ver.h.in
CMake/cppProsto/Lesson_2/src/: main.cpp  stest.cpp
CMake/cppProsto/Lesson_3/Doc/: Doc.txt  Terminal.html
CMake/cppProsto/Lesson_3/shared_lib/: CMakeLists.txt
CMake/cppProsto/Lesson_3/shared_lib/lib_src/: sLibrary.cpp  sLibrary.hpp
CMake/cppProsto/Lesson_3/static_lib/lib_src/: sLibrary.cpp  sLibrary.hpp
CMake/cppProsto/Lesson_3/static_lib/src/: main.cpp
CMake/cppProsto/Lesson_4/Doc/: Doc.txt  Terminal.html
CMake/cppProsto/Lesson_4/project/: CMakeLists.txt
CMake/cppProsto/Lesson_4/project/include/: path.h.in  ver.h.in
CMake/cppProsto/Lesson_4/project/lib_include/: sLibrary.hpp
CMake/cppProsto/Lesson_4/project/src/: main.cpp
CMake/cppProsto/Lesson_4/shared_lib/: CMakeLists.txt
CMake/cppProsto/Lesson_4/shared_lib/include/: sLibrary.hpp
CMake/cppProsto/Lesson_4/shared_lib/lib_src/: sLibrary.hpp
CMake/cppProsto/Lesson_4/shared_lib/src/: main.cpp  sLibrary.cpp
CMake/cppProsto/Lesson_4/static_lib/: CMakeLists.txt
CMake/cppProsto/Lesson_4/static_lib/include/: sLibrary.hpp
CMake/cppProsto/Lesson_4/static_lib/src/: sLibrary.cpp
CMake/cppProsto/Lesson_5/: CMakeLists.txt
CMake/cppProsto/Lesson_5/Doc/: Doc.txt  Terminal.html
CMake/cppProsto/Lesson_5/main/: CMakeLists.txt  main.cpp
CMake/cppProsto/Lesson_5/sub_project1/: CMakeLists.txt
CMake/cppProsto/Lesson_5/sub_project2/: CMakeLists.txt
CMake/cppProsto/Lesson_6/: CMakeLists.txt
CMake/cppProsto/Lesson_6/Doc/: Doc.txt  Terminal.html
CMake/cppProsto/Lesson_6/cmake/modules/: test.cmake
Eclipse/: Eclipse IDE in Linux.txt
Java/: Java_Linux_installation.txt
Linux/: process.txt  systemd.txt
Linux/PackageManager/apt/: ENF_Understanding the apt-cache depends Output.txt  RUS_Understanding the apt-cache depends Output.txt  off-line-install.txt
Linux/find/: find.sh
Linux/sqlite3/: sqlite3.sh
Linux/tmux/: tmux.sh
Operation-Systems/Events/Windows/: LogOn.txt
PowerShell/: PS_Supporting
PowerShell/DiskParted/: PrepareDiskForWindowsAndLinuxInstallation.ps1  disk-part-script.txt
Python/: Base64_coding_performance.py  Build_Python_from_source.txt  pip.txt  requirements.txt
Python/Build-from-source/: terminal_builds_commands.html
Python/Celery/: celery.py
Python/Django/: Doc.txt
Python/GetPlatformInfo/: get-simple-system-info.py  get-system-info.py
Python/GetPlatformInfo/Linux-4.15.0-213-generic-x86_64-with-Ubuntu-18.04-bionic/: get-system-info.log.doc
Python/GetPlatformInfo/Linux-4.19.97-v7+-armv7l-with-debian-10.3 (Raspberrypi-32bit)/: get-system-info.doc
Python/GetPlatformInfo/Linux-5.15.0-86-generic-x86_64-with-glibc2.35 (Ubuntu.22)/: get-system-info.doc
Python/GetPlatformInfo/Linux-5.15.131-1-MANJARO-x86_64-with-glibc2.38/: get-system-info.doc
Python/GetPlatformInfo/Linux-5.15.36-v8+-aarch64-with-glibc2.31 (Raspberrypi-64bit)/: get-system-info.doc
Python/GetPlatformInfo/Linux-5.8.0-55-generic-x86_64-with-glibc2.29(Ubuntu.20)/: get-system-info.doc
Python/GetPlatformInfo/Linux-5.9.0-kali1-686-pae-i686-with-glibc2.34/: get-system-info.doc
Python/GetPlatformInfo/Windows-10-10.0.19045-SP0-AMD64/: get-system-info.doc
Python/GetPlatformInfo/Windows-7-6.1.7601-SP1/: get-system-info.doc
Python/Jinja/Lesson_1/: lesson_1.py
Python/Jinja/Lesson_2/: ex1.0.htm  ex1.1.htm  lesson_2.py
Python/Jinja/Lesson_3/: lesson_3.py
Python/Jinja/Lesson_4/: lesson_4.py
Python/Jinja/Lesson_4/templates/: main.htm
Python/Jinja/Lesson_5/: lesson_5.py
Python/Jinja/Lesson_5/templates/: dialogs.htm  header.htm  header_1.htm  page.htm  page_1.htm  page_2.htm  page_3.htm  page_4.htm  page_with_no_raising_except_template_missing.htm
Python/Jinja/Lesson_6/: lesson_6.py
Python/Jinja/Lesson_6/templates/: about.htm  about_1.htm  about_2.htm  about_3.htm  about_4.htm  about_5.htm  about_6.htm  about_7.htm  about_8.htm  about_9.htm  ex_main.htm
Python/Jinja/Lesson_6/templates/layout/: default_1.htm  default_2.htm  default_3.htm  default_4.htm
Python/OOP/Lesson_1/: ex1.py
Python/RegExp/: re_example.py  re_sub.py
Python/RunProcess/: HelloWorld.PS1  RunProcess.py
Python/asyncio/: asyncio_1.py
Python/jwcrypto/: jwt_example.py
Python/loguru/: go.py
Utilites/Cross/: VeraCrypt.txt
Vim/: Interactive Vim tutorial.txt  Vim_Didgitalize.txt
Vim/NeoVim/: Installation.txt
Vim/NeoVim/BlackRectangle/: init.vim
Vim/NeoVim/Digitalized/: init.vim
Vim/Vim/Digitalized/: .vimrc
Vim/vimtutor/: Lesson 1.txt  Lesson 2.txt  Lesson 3.txt  Lesson 4.txt  Lesson 5.txt  Lesson 6.txt  Lesson 7.txt  vimtutor_all.txt  vimtutor_resume.txt
VirtualBox/: Descriptions.txt
project_acvp/: CommonDescription.txt  Settings libacvp project.txt
